--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,3 +53,8 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+
+      - run:
+          name: Deploy
+          command: curl -X POST -d {} ${hook}
+
